@@ -1,5 +1,9 @@
 2008-04-28  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* libavogadro/src/extensions/gaussianinputdialog.cpp: Update the
+	preview when setMolecule is called. Also added some logic to disable
+	basis sets with certain theories.
+
 	* libavogadro/src/extensions/basisset.cpp: Actually call the doD and
 	doD5 functions - this really helps when trying to use d-type
 	orbitals to generate cubes...
